JWT login and admin dashboard

--- a/BloodLine_API/BloodLineSolution/BloodLineAPI/appsettings.json
+++ b/BloodLine_API/BloodLineSolution/BloodLineAPI/appsettings.json
@@ -9,5 +9,11 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BloodLine;Trusted_Connection=True;"
+  },
+  "Jwt": {
+    "Key": "ThisIsASecureKeyThatIsLongEnough123!",
+    "Issuer": "BloodLineAPI"
   }
+
+
 }
