--- a/BloodLine_UI/bloodline/package.json
+++ b/BloodLine_UI/bloodline/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "framer-motion": "^12.23.12",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
