New Updated Files
Encryption code

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,40 +6,15 @@
     }
   },
   "AllowedHosts": "*",
+
   "ConnectionStrings": {
-    "conStr": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=BloodLine;Integrated Security=True;Pooling=False;Encrypt=True;Trust Server Certificate=False"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BloodLineDB;Trusted_Connection=True;"
   },
-  "JwtSettings": {
-    "Secret": "YOUR_SUPER_SECRET_KEY_HERE_CHANGE_IT",
+
+  "Jwt": {
+    "Key": "ThisIsASecureKeyThatIsLongEnough123!",
     "Issuer": "BloodLineAPI",
-    "Audience": "BloodLineClients",
-    "ExpiryMinutes": 60
-  },
-  "AWS": {
-    "Region": "ap-south-1"
-  },
-  "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
-      }
-    },
-    "WriteTo": [
-      { "Name": "Console" },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "Logs/log-.txt",
-          "rollingInterval": "Day"
-        }
-      }
-    ]
-  },
-  "RateLimiting": {
-    "MaxRequestsPerPeriod": 100,
-    "PeriodSeconds": 60
+    "Audience": "BloodLineUsers",
+    "DurationInMinutes": 60
   }
 }
