--- a/BloodLine_API/BloodLineSolution/BloodLineAPI/appsettings.json
+++ b/BloodLine_API/BloodLineSolution/BloodLineAPI/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    // "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BloodLine;Trusted_Connection=True;",
-    "DefaultConnection": "Server=tcp:bloodlineserver18.database.windows.net,1433;Initial Catalog=BloodLine;Persist Security Info=False;User ID=Saurav;Password=Deshmukh@79;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    // "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BloodLine;Trusted_Connection=True;
+    
   },
   "Jwt": {
     "Key": "ThisIsASecureKeyThatIsLongEnough123!",
